@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: clock.test,v 1.20 2002/06/26 13:42:23 rmax Exp $
+# RCS: @(#) $Id: clock.test,v 1.21 2002/07/05 11:16:01 rmax Exp $
 
 set env(LC_TIME) POSIX
 
@@ -114,6 +114,14 @@ test clock-3.11 {clock format tests} {
 test clock-3.12 {clock format tests} {
     clock format 123 -format ""
 } ""
+test clock-3.13 {clock format with non-ASCII character in the format string} {
+    set oldenc [encoding system] 
+    encoding system iso8859-1
+    set res [clock format 0 -format \u00c4]
+    encoding system $oldenc
+    unset oldenc
+    set res
+} "\u00c4"
 
 # clock scan
 test clock-4.1 {clock scan tests} {
